src/mslearn-docker-kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
      - name: store
        image: cmyazurecontainerregistry.azurecr.io/store:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: store
