src/mslearn-docker-kubernetes/frontend/service-cluster.yml
apiVersion: v1
kind: Service
metadata:
  name: store-cluster-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: store
